# WoCaoGMS

./: README.md
.qt/: QtDeploySupport.cmake
.qtc_clangd/: compile_commands.json
WoCaoGMS/: CMakeLists.txt  CMakeLists.txt.user.4d7a31c  CMakeLists.txt.user.8723692  globalconfig.cpp  globalconfig.h  goodsadddialog.cpp  goodsadddialog.h  goodsadddialog.ui  goodsinfo.cpp  goodsinfo.h  goodsinfomodel.cpp  goodsinfomodel.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  operationrecord.cpp  operationrecord.h  registdialog.cpp  registdialog.h  registdialog.ui  showrecord.cpp  showrecord.h  showrecord.ui  userdata.cpp  userdata.h  userdatamodel.cpp  userdatamodel.h
build-WoCaoGMS-Qt_6_4_2_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-WoCaoGMS-Qt_6_4_2_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-WoCaoGMS-Qt_6_4_2_for_macOS-Debug/.qtc_clangd/: compile_commands.json
build-WoCaoGMS-Qt_6_4_2_for_macOS-Debug/WoCaoGMS.app/Contents/: Info.plist
build-WoCaoGMS-Qt_6_4_2_for_macOS-Debug/WoCaoGMS_autogen/: deps  mocs_compilation.cpp
build-WoCaoGMS-Qt_6_4_2_for_macOS-Debug/WoCaoGMS_autogen/EWIEGA46WW/: moc_goodsadddialog.cpp  moc_goodsadddialog.cpp.d  moc_logindialog.cpp  moc_logindialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_registdialog.cpp  moc_registdialog.cpp.d  moc_showrecord.cpp  moc_showrecord.cpp.d
build-WoCaoGMS-Qt_6_4_2_for_macOS-Debug/WoCaoGMS_autogen/include/: ui_goodsadddialog.h  ui_logindialog.h  ui_mainwindow.h  ui_registdialog.h
build-WoCaoGMS-Qt_6_4_2_for_macOS-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-WoCaoGMS-Qt_6_4_2_for_macOS-Release/.qt/: QtDeploySupport.cmake
build-WoCaoGMS-Qt_6_4_2_for_macOS-Release/.qtc_clangd/: compile_commands.json
build-WoCaoGMS-Qt_6_4_2_for_macOS-Release/WoCaoGMS_autogen/: deps  mocs_compilation.cpp
(+430 files in other folders)
